--- a/src/Arii/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Arii/AdminBundle/Resources/views/Default/index.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <script language="javascript">
 function Init() {
-    globalLayout.cells("c").attachURL('{{ asset('/images/arii.jpg') }}');  
-};
+    globalLayout.cells("b").attachURL('{{ asset('/images/arii.jpg') }}');  
+}
 </script>
 {% endblock %}
