--- a/src/Arii/ACKBundle/Resources/views/Containers/index.html.twig
+++ b/src/Arii/ACKBundle/Resources/views/Containers/index.html.twig
@@ -2,30 +2,26 @@
 {% block body %}
 <script language="javascript">
 function Init() {
-    mySidebar.items('objects').setActive();
+    mySidebar.items('containers').setActive();
 
-    myLayout = globalLayout.cells("b").attachLayout('3L');
-    myLayout.cells("c").collapse();
+    myLayout = globalLayout.cells("b").attachLayout('2U');
+    myLayout.cells("a").setText("{{ "Menu" | trans }}");
+    myLayout.cells("b").setText("{{ "Views" | trans }}");
+    myLayout.cells("a").setWidth(400);
 
-    subLayout = myLayout.cells("a").attachLayout("2E");
-    subLayout.cells("a").setText("{{ "Hosts" | trans }}");
-    subLayout.cells("b").setText("{{ "Hosted" | trans }}");
-    subLayout.cells("b").collapse();
-    
-    myGrid = subLayout.cells("a").attachGrid();
+    myGrid = myLayout.cells("a").attachGrid();
     myGrid.setImagePath( "{{ asset('/images/') }}");
     myGrid.setHeader("{{ "Name" | trans }},{{ "Description" | trans }}");
-    myGrid.attachHeader("#text_filter,#text_filter,#select_filter");
-    myGrid.setInitWidths("200,*");    
-    myGrid.setColAlign("left,left");
+    myGrid.attachHeader("#text_filter,#text_filter");
+    myGrid.setInitWidths("140,*");    myGrid.setColAlign("left,left");
     myGrid.setColTypes("ro,ro");
     myGrid.setColSorting("str,str");
     myGrid.enableAlterCss("even_row","odd_row");   
     myGrid.enableDragAndDrop(true);    
     myGrid.init();
-    myGrid.load( "{{ url('xml_ACK_objects_grid') }}?type=HOST" );
+    myGrid.load( "{{ url('xml_ACK_objects_grid') }}?state=OPEN" );
     myGrid.attachEvent("onRowDblClicked", function (rid) {
-        EditObject(rid);
+        EditEvent(rid);
     });
     myGrid.attachEvent("onDrag", function(sId,tId,sObj,tObj,sInd,tInd){
         changeState(sId,sObj,tObj);
@@ -39,55 +35,15 @@ function Init() {
             list: [    
                 {type: "input", name: 'name', label:'{{ 'Name' | trans }}', required: true },
                 {type: "input", name: 'title', label:'{{ 'Title' | trans }}' },
-                {type: "input", name: 'description', label:'{{ 'Description' | trans }}', rows: 6 },
-                {type: "input", name: 'obj_type', label:'{{ 'Type' | trans }}' },
-                {type: "input", name: 'state', label:'{{ 'State' | trans }}' },
-                {type: "input", name: 'state_time', label:'{{ 'State time' | trans }}'},
-                {type: "input", name: 'updated', label:'{{ 'Updated' | trans }}' }                
+                {type: "input", name: 'description', label:'{{ 'Description' | trans }}', rows: 6 }                
             ]
         }
     ];
-    
-    myTabbar2 = subLayout.cells("b").attachTabbar();
-    
-    myTabbar2.addTab("services","{{ "Services" | trans }}","150px", null, true);
-    myTabbar2.addTab("jobs","{{ "Jobs" | trans }}","150px");
-    
-    myServices = myTabbar2.cells("services").attachGrid();
-    myServices.setImagePath( "{{ asset('/images/') }}");
-    myServices.setHeader("{{ "Name" | trans }},{{ "Description" | trans }}");
-    myServices.attachHeader("#text_filter,#text_filter");
-    myServices.setInitWidths("200,*");    
-    myServices.setColAlign("left,left");
-    myServices.setColTypes("ro,ro");
-    myServices.setColSorting("str,str");
-    myServices.enableAlterCss("even_row","odd_row");   
-    myServices.enableDragAndDrop(true);    
-    myServices.init();
-    myServices.attachEvent("onRowDblClicked", function (rid) {
-        EditObject(rid);
-    });
-    
-    myJobs = myTabbar2.cells("jobs").attachGrid();
-    myJobs.setImagePath( "{{ asset('/images/') }}");
-    myJobs.setHeader("{{ "Name" | trans }},{{ "Description" | trans }}");
-    myJobs.attachHeader("#text_filter,#text_filter");
-    myJobs.setInitWidths("200,*");    
-    myJobs.setColAlign("left,left");
-    myJobs.setColTypes("ro,ro");
-    myJobs.setColSorting("str,str");
-    myJobs.enableAlterCss("even_row","odd_row");   
-    myJobs.enableDragAndDrop(true);    
-    myJobs.init();
-    myJobs.attachEvent("onRowDblClicked", function (rid) {
-        EditObject(rid);
-    });
-    
     myForm = myLayout.cells("b").attachForm(formData);
     
     myFormToolbar = myLayout.cells("b").attachToolbar();
     myFormToolbar.setIconsPath("{{ asset('/images/') }}");
-    myFormToolbar.loadStruct("{{ url('xml_ACK_object_toolbar') }}");
+    myFormToolbar.loadStruct("{{ url('xml_ACK_event_toolbar') }}");
     
     myFormToolbar.attachEvent("onClick", function(id){
         switch (id) {
@@ -99,7 +55,7 @@ function Init() {
                  type: "confirm-error",
                  text: '{{ "Do you confirm the suppression ?" | trans }}',
                  callback: function(answer) { if (answer) {
-                           myForm.send("{{ url('xml_ACK_object_delete') }}","POST",function(loader,response){
+                           myForm.send("{{ url('xml_ACK_event_delete') }}","POST",function(loader,response){
                            if(response === "success")
                            {
                              dhtmlx.message({
@@ -155,7 +111,7 @@ function Init() {
                     globalLayout.progressOff();
                     return;
                 }
-                myForm.send("{{ url('xml_ACK_object_save') }}","POST",function(loader,response){
+                myForm.send("{{ url('xml_ACK_event_save') }}","POST",function(loader,response){
                    if(response === "success")
                    {
                         dhtmlx.message({
@@ -183,59 +139,9 @@ function Init() {
                 alert(id);
             }
     });
-    
-    myLayout.cells("c").setText("{{ "Detail" | trans }}");
-    myLayout.cells("c").collapse();
-    
-    myTabbar = myLayout.cells("c").attachTabbar();
-    myTabbar.addTab("contains","{{ "Contains" | trans }}","150px", null, true);
-    myTabbar.addTab("depends","{{ "Depends" | trans }}","150px");
-    
-    myContains = myTabbar.cells("contains").attachGrid();
-    myContains.setImagePath( "{{ asset('/images/') }}");
-    myContains.setHeader("{{ "Name" | trans }},{{ "Description" | trans }}");
-    myContains.attachHeader("#text_filter,#text_filter");
-    myContains.setInitWidths("140,*");    
-    myContains.setColAlign("left,left");
-    myContains.setColTypes("ro,ro");
-    myContains.setColSorting("str,str");
-    myContains.enableAlterCss("even_row","odd_row");   
-    myContains.enableDragAndDrop(true);    
-    myContains.init();
-
-    myDepends = myTabbar.cells("depends").attachGrid();
-    myDepends.setImagePath( "{{ asset('/images/') }}");
-    myDepends.setHeader("{{ "Name" | trans }},{{ "Description" | trans }}");
-    myDepends.attachHeader("#text_filter,#text_filter");
-    myDepends.setInitWidths("140,*");    
-    myDepends.setColAlign("left,left");
-    myDepends.setColTypes("ro,ro");
-    myDepends.setColSorting("str,str");
-    myDepends.enableAlterCss("even_row","odd_row");   
-    myDepends.enableDragAndDrop(true);    
-    myDepends.init();
 }
 
-function PageRefresh() {};
-
-function EditObject (id) {
-    subLayout.cells("b").expand(); 
-    myLayout.cells("c").expand();    
-    subLayout.cells('b').progressOn();
-    myLayout.cells('c').progressOn();
-    myServices.load( "{{ url('xml_ACK_objects_grid') }}?type=SERVICES&HOST=" );
-    myServices.load( "{{ url('xml_ACK_objects_grid') }}?type=JOBS&HOST=" );
-    
-    myForm.load("{{ url('xml_ACK_object_form') }}?id="+id,function(){
-        myLayout.cells('b').progressOff();
-        myContains.load("{{ url('xml_ACK_contains_grid') }}?object_id="+id, function (rid) {
-            myDepends.load("{{ url('xml_ACK_depends_grid') }}?object_id="+id, function (rid) {
-                myLayout.cells('c').progressOff();
-            });
-        });
-    });
-}
-
-
+function PageRefresh() {
+};
 </script>
 {% endblock %}
