--- a/src/Arii/ACKBundle/Resources/views/Events/index.html.twig
+++ b/src/Arii/ACKBundle/Resources/views/Events/index.html.twig
@@ -4,11 +4,7 @@
 function Init() {
     mySidebar.items('events').setActive();
 
-    myToolbar.loadStruct('{{ url('xml_ARII_toolbar') }}?refresh=1', function() {
-        ToolbarTime();
-    });
-
-    myLayout = globalLayout.cells("c").attachLayout('3J');
+    myLayout = globalLayout.cells("b").attachLayout('3J');
     myLayout.cells("a").hideHeader();
 
  /*
@@ -78,16 +74,6 @@ Remplacé par drag&drop
 
    ];
     myForm = myTabbar2.cells("detail").attachForm(formData);
-
-    myToolbar.attachEvent("onClick", function(id){
-        switch (id) {
-            case 'refresh':
-                myGrid.updateFromXML("{{ url('xml_ACK_events_grid') }}");
-                break;
-            default:
-                alert(id);
-            }
-    });
     
     myActions = myTabbar2.cells("actions").attachGrid();
     myActions.setImagePath( "{{ asset('/images/') }}");
@@ -185,27 +171,6 @@ function EditEvent (id) {
             myLayout.cells('b').progressOff();
         });
     });
-}
-
-function ClickToolbar (itemid,state) {
-    var id = itemid.split('_');    
-    switch (id[0]) {
-        case 'refresh':
-            myGrid.updateFromXML("{{ url('xml_ACK_notifications_grid') }}");
-            break;
-        case 'EXPORT':
-            switch (id[1]) {
-                case 'xls':
-                    alert("{{ url('xls_ACK_notifications') }}");
-                    window.location.href= "{{ url('xls_ACK_notifications') }}";                
-                    break;
-                default:
-                    alert(id);
-            }
-            break;
-        default:
-            alert(id);
-        }
 }
 </script>
 {% endblock %}
