--- a/src/Arii/ACKBundle/Resources/views/Alerts/index.html.twig
+++ b/src/Arii/ACKBundle/Resources/views/Alerts/index.html.twig
@@ -9,7 +9,7 @@ function Init() {
 
  /*
 Remplacé par drag&drop
-    myGridMenu = new dhtmlXMenuObject(null);
+    myGridMenu = new dhtmlXMenuProbe(null);
     myGridMenu.setIconsPath( "{{ asset('/images/') }}" );
     myGridMenu.renderAsContextMenu();
     myGridMenu.loadStruct("{{ url('xml_ACK_alerts_grid_menu') }}");
