--- a/src/Arii/ACKBundle/Resources/views/layout.html.twig
+++ b/src/Arii/ACKBundle/Resources/views/layout.html.twig
@@ -9,10 +9,10 @@
 <script language="javascript">
 var menurefresh;
 dhtmlxEvent(window,"load",function(){
-    AriiLayout('ACK','history,refresh',200);    
+    AriiLayout('ACK','history,dot,refresh',200);    
     globalLayout.cells("a").setText("{{ "Menu" | trans }}");
     globalLayout.cells("a").showHeader();
-    
+ 
     mySidebar = globalLayout.cells("a").attachSidebar({
         icons_path: "{{ asset('/images/') }}",
         // template: "tiles",
@@ -23,7 +23,7 @@ dhtmlxEvent(window,"load",function(){
             { id:"sep1",      type: "separator" },
             { id:"events",    text: "{{ "Events" | trans }}",     icon: "stopped.png" },
             { id:"sep3",      type: "separator" },
-            { id:"objects",   text: "{{ "Objects" | trans }}",    icon: "object.png" },
+            { id:"probes",   text: "{{ "Probes" | trans }}",    icon: "probe.png" },
 //            { id:"links",     text: "{{ "Impact" | trans }}",     icon: "impact.png" },
             { id:"alerts",    text: "{{ "Alerts" | trans }}",     icon: "alert.png" },
             { id:"sep4",      type: "separator" },
